--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Samandar Milk Foods</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <nav>
+            <div id="first_menu">
+                <ul>
+                    <li>About</li>
+                    <li>Team</li>
+                </ul>
+            </div>
+            <div id="logo">
+                <h1>SMF</h1>
+            </div>
+            <div id="second_menu">
+                <ul>
+                    <li>Products</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
+        <script src="js/main.js"></script>
     </body>
 </html>
