--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <ul id="menu">
                             <li><a href="">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="">Products</a></li>
+                            <li><a href="#products">Products</a></li>
                             <li><a href="">Team</a></li>
                             <li><a href="">Testimonals</a></li>
                             <li><a href="">Contact</a></li>
@@ -144,8 +144,52 @@
                 </div>
             </div>
         </section>   
-        <section>
 
+        <!----------------------  Products section  ------------------------>
+
+        <section id="products">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Products</h2>
+                    <h3 class="section-subheading text-muted">Ajmal, I need help to learn how to tweak this part. I don't want this timeline crap. Haha.</h3>
+                </div>
+            </div>
+            <div id="product-item">
+                <div class="product milk">
+                    <div class="product-content">
+                        <h2 class="product-title">Milk</h2>
+                        <p class="product-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Libero, dolorum adipisci. ipsum recusandae cumque blanditiis rem sed soluta animi quasi quod ipsa totam atque.</p>
+                        <a href="#" class="product-button">Learn More</a>     
+                    </div>
+                </div>
+                <div class="product yogurt">
+                    <div class="product-content">
+                        <h2 class="product-title">Yogurt</h2>
+                        <p class="product-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Libero, dolorum adipisci. ipsum recusandae cumque blanditiis rem sed soluta animi quasi quod ipsa totam atque.</p>
+                        <a href="#" class="product-button">Learn More</a>     
+                    </div>
+                </div>
+                <div class="product kefir">
+                    <div class="product-content">
+                        <h2 class="product-title">Kefir</h2>
+                        <p class="product-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Libero, dolorum adipisci. ipsum recusandae cumque blanditiis rem sed soluta animi quasi quod ipsa totam atque.</p>
+                        <a href="#" class="product-button">Learn More</a>     
+                    </div>
+                </div><div class="product cream">
+                    <div class="product-content">
+                        <h2 class="product-title">Cream</h2>
+                        <p class="product-body">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Libero, dolorum adipisci. ipsum recusandae cumque blanditiis rem sed soluta animi quasi quod ipsa totam atque.</p>
+                        <a href="#" class="product-button">Learn More</a>     
+                    </div>
+                </div>
+            </div>
+            <div style="text-align: center;">
+                <button id="products-button">More</button>
+            </div>
         </section>  
         <script src="js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
