--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Samandar Milk Foods</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -32,7 +33,7 @@
                             <li><a href="">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#products">Products</a></li>
-                            <li><a href="">Team</a></li>
+                            <li><a href="#team">Team</a></li>
                             <li><a href="">Testimonals</a></li>
                             <li><a href="">Contact</a></li>
                         </ul>
@@ -86,7 +87,7 @@
                                         <h4 class="subheading">Our Humble Beginnings</h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente.</p>
                                     </div>
                                 </div>
                             </li>
@@ -100,7 +101,7 @@
                                         <h4 class="subheading">An Agency is Born</h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente.</p>
                                     </div>
                                 </div>
                             </li>
@@ -114,7 +115,7 @@
                                         <h4 class="subheading">Transition to Full Service</h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente.</p>
                                     </div>
                                 </div>
                             </li>
@@ -128,7 +129,7 @@
                                         <h4 class="subheading">Phase Two Expansion</h4>
                                     </div>
                                     <div class="timeline-body">
-                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente.</p>
                                     </div>
                                 </div>
                             </li>
@@ -149,8 +150,8 @@
 
         <section id="products">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Products</h2>
+                <div class="col-lg-12 text-center" style="padding-right: 0; width: 100vw;">
+                    <h2 class="section-heading" style="padding-top: 20px;">Products</h2>
                     <h3 class="section-subheading text-muted">Ajmal, I need help to learn how to tweak this part. I don't want this timeline crap. Haha.</h3>
                 </div>
             </div>
@@ -190,7 +191,74 @@
             <div style="text-align: center;">
                 <button id="products-button">More</button>
             </div>
-        </section>  
+        </section> 
+
+        <!---------------------  Our Team section  --------------------->
+
+        <section id="team">
+            <div id="team-wrapper">
+                <h2 class="section-heading">Meet Our Team</h2>
+                <h3 class="section-subheading text-muted">Ajmal, I need help to learn how to tweak this part. I don't want this timeline crap. Haha.</h3>
+                <div id="member-wrapper">
+                    <div class="member">
+                        <img class="member_bg" src="img/member_bg1.jpg" alt="background">
+                        <img class="member_picture" src="img/member1.jpg" alt="member1">
+                        <h3>Joe Lord</h3>
+                        <p class="member_job">Manager</p>
+                        <p class="member_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto esse. Consectetur adipisicing elit. Iusto esse.</p>
+                        <a class="member_btn" href="#">Contact</a>
+                        <ul class="member_social_media">
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="member">
+                        <img class="member_bg" src="img/member_bg2.jpeg" alt="background">
+                        <img class="member_picture" src="img/member2.jpg" alt="member1">
+                        <h3>Joe Lord</h3>
+                        <p class="member_job">Manager</p>
+                        <p class="member_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto esse. Consectetur adipisicing elit. Iusto esse.</p>
+                        <a class="member_btn" href="#">Contact</a>
+                        <ul class="member_social_media">
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="member">
+                        <img class="member_bg" src="img/member_bg3.jpg" alt="background">
+                        <img class="member_picture" src="img/member3.png" alt="member1">
+                        <h3>Joe Lord</h3>
+                        <p class="member_job">Manager</p>
+                        <p class="member_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto esse. Consectetur adipisicing elit. Iusto esse.</p>
+                        <a class="member_btn" href="#">Contact</a>
+                        <ul class="member_social_media">
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="member">
+                        <img class="member_bg" src="img/member_bg4.jpg" alt="background">
+                        <img class="member_picture" src="img/member4.jpg" alt="member1">
+                        <h3>Joe Lord</h3>
+                        <p class="member_job">Manager</p>
+                        <p class="member_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto esse. Consectetur adipisicing elit. Iusto esse.</p>
+                        <a class="member_btn" href="#">Contact</a>
+                        <ul class="member_social_media">
+                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section> 
         <script src="js/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
     </body>
