Contact section added

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                             <li><a href="#about">About</a></li>
                             <li><a href="#products">Products</a></li>
                             <li><a href="#team">Team</a></li>
-                            <li><a href="">Testimonals</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="#testimonials">Testimonals</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -211,8 +211,8 @@
                         <a class="member_btn" href="#">Contact</a>
                         <ul class="member_social_media">
                             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter twit"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram insta"></i></a></li>
                             <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -225,8 +225,8 @@
                         <a class="member_btn" href="#">Contact</a>
                         <ul class="member_social_media">
                             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter twit"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram insta"></i></a></li>
                             <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -239,8 +239,8 @@
                         <a class="member_btn" href="#">Contact</a>
                         <ul class="member_social_media">
                             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter twit"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram insta"></i></a></li>
                             <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -253,8 +253,8 @@
                         <a class="member_btn" href="#">Contact</a>
                         <ul class="member_social_media">
                             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter twit"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram insta"></i></a></li>
                             <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
@@ -272,7 +272,7 @@
                         <div class="col-md-12">
                             <div id="customers-testimonial" class="text-center owl-carousel owl-theme">
                                 <div class="testimonial">
-                                    <img class="img-responsive img-circle" src="img/member1.jpg" alt="">
+                                    <img class="img-responsive img-circle testimonial-img" src="img/member1.jpg" alt="">
                                     <blockquote class="text-center">
                                         <p>
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
@@ -288,7 +288,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial">
-                                    <img class="img-responsive img-circle" src="img/member2.jpg" alt="">
+                                    <img class="img-responsive img-circle testimonial-img" src="img/member2.jpg" alt="">
                                     <blockquote class="text-center">
                                         <p>
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
@@ -304,7 +304,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial">
-                                    <img class="img-responsive img-circle" src="img/member3.png" alt="">
+                                    <img class="img-responsive img-circle testimonial-img" src="img/member3.png" alt="">
                                     <blockquote class="text-center">
                                         <p>
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
@@ -326,6 +326,39 @@
             </div>
         </section>
 
+        <!----------------------  Contact section  --------------------->
+
+        <section id="contact">
+            <div class="contact-item">
+                <h1>Contact Info</h1>
+                <h2><i class="fa fa-phone-alt" aria-hidden="true"></i>Phone</h2>
+                <p>+998995575677</p>
+                <h2><i class="fa fa-envelope" aria-hidden="true"></i>Email</h2>
+                <p>samandarmilkfoods@gmail.com</p>
+                <h2><i class="fa fa-map-marker-alt" aria-hidden="true"></i>Address</h2>
+                <p>Jizzax v. Jizzax sh. Hamid Olimjon str</p>
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+            <div class="contact-item">
+                <h2 style="font-size: 25px;color: white;font-weight: bold;">Leave message</h2>
+                <form action="">
+                    <input class="contact-item-input" type="text" name="fullName" placeholder="Your Full Name">
+                    <input class="contact-item-input" type="email" name="email" placeholder="Your Email">
+                    <input class="contact-item-input" type="text" name="subject" placeholder="Theme">
+                    <textarea class="contact-item-textarea" name="textarea" placeholder="Your Comments Here.."></textarea>
+                    <input class="contact-item-btn" type="submit" value="SUBMIT">
+                </form>
+            </div>
+            <div class="contact-item">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.1872397997918!2d67.83623381488553!3d40.14208708022171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38b297797faed103%3A0x7d9f9f0157abbf61!2sSamandar%20Milk%20Foods!5e1!3m2!1sru!2s!4v1625280296425!5m2!1sru!2s" width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </section>
+
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="OwlCarousel2-2.3.4/dist/owl.carousel.js"></script>
@@ -334,14 +367,14 @@
         <script src="js/main.js"></script>
         <script>
             $(function(){
-    $("#customers-testimonial").owlCarousel({
-        items:1,
-        autoplay:true,
-        smartSpeed: 700,
-        loop:true,
-        autoPlayHoverPause:true
-    });
-});
+                $("#customers-testimonial").owlCarousel({
+                    items:1,
+                    autoplay:true,
+                    smartSpeed: 700,
+                    loop:true,
+                    autoPlayHoverPause:true
+                });
+            });
         </script>
     </body>
 </html>
